<resources>
    <string name="app_name">Proyectoadm</string>
    <string name="bt_login">Login</string>
    <string name="tv_register_message">Si aun no tienes cuenta crealo</string>
    <string name="tv_go_to_register">Aqui</string>
    <string name="ti_email">Email</string>
    <string name="ti_password">Contraseña</string>
    <string name="ti_name">Nombre</string>
    <string name="ti_confirm_password">Confirmar contraseña</string>
    <string name="bt_register">Registrar</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_product">Gestion de productos</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_history_orders">Historial de pedidos</string>
    <string name="Account">Cuenta</string>
    <string name="menu_logout">Cerrar sesion</string>
</resources>
