<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navPerfil"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/navProduct"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/navOrders"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/navHistoryOrders"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_history_orders" />
    </group>

    <item android:title="@string/Account">
        <menu>
            <item
                android:id="@+id/navLogOut"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
